--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,31 @@
-GEMINI_API_KEY=your_api_key_here
-DATABASE_URL=postgresql://admin:password@localhost:5432/insight_engine
+# Postgres Metadata Store
+METADATA_DB_USER=admin
+METADATA_DB_PASSWORD=password
+METADATA_DB_NAME=insight_engine
+
+# External Test DB
+TEST_DB_USER=test_user
+TEST_DB_PASSWORD=test_password
+TEST_DB_NAME=external_test_db
+
+# Minio
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+
+# RabbitMQ
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+
+# ChromaDB
+CHROMA_HOST=chromadb
+CHROMA_PORT=8000
+CHROMA_USER=admin
+CHROMA_PASSWORD=password
+
+
+# Gemini
+GEMINI_API_KEY=your_gemini_api_key# Chroma Cloud
+CHROMA_USE_CLOUD=false
+CHROMA_CLOUD_API_KEY=
+CHROMA_CLOUD_TENANT=
+CHROMA_CLOUD_DATABASE=
