--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-chromadb>=0.4.0
-psycopg2-binary>=2.9.0
-python-dotenv>=1.0.0
-google-generativeai>=0.3.0
 fastapi
-uvicorn
-sqlalchemy
-alembic
+uvicorn[standard]
+pydantic
+chromadb>=0.5.0
+numpy<2.0
 minio
+google-generativeai
 pika
+python-multipart
+requests
+sqlalchemy
+psycopg2-binary
+python-dotenv
+alembic
