feat: Introduce MCP Registry service and dynamic tool discovery for agents.

--- a/apps/sql-insight-engine/Dockerfile
+++ b/apps/sql-insight-engine/Dockerfile
@@ -6,9 +6,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy source code and migrations
+# Copy source code, migrations and scripts
 COPY src /app/src
 COPY migrations /app/migrations
+COPY scripts /app/scripts
 COPY alembic.ini /app/alembic.ini
 
 ENV PYTHONPATH=/app/src:/app
