--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.8'
 
 services:
+  mcp-registry:
+    build:
+      context: ./apps/mcp-registry
+    container_name: mcp-registry
+    ports:
+      - "8010:8010"
+    networks:
+      - insight_network
+
   metadata_store:
     image: postgres:15
     container_name: metadata_store
@@ -8,6 +17,7 @@ services:
       POSTGRES_USER: ${METADATA_DB_USER}
       POSTGRES_PASSWORD: ${METADATA_DB_PASSWORD}
       POSTGRES_DB: ${METADATA_DB_NAME}
+      PYTHONUNBUFFERED: "1"
     ports:
       - "5432:5432"
     volumes:
@@ -22,6 +32,7 @@ services:
       POSTGRES_USER: ${TEST_DB_USER}
       POSTGRES_PASSWORD: ${TEST_DB_PASSWORD}
       POSTGRES_DB: ${TEST_DB_NAME}
+      PYTHONUNBUFFERED: "1"
     ports:
       - "5433:5432"
     volumes:
@@ -88,7 +99,7 @@ services:
     volumes:
       - ./apps/sql-insight-engine/src:/app/src
     ports:
-      - "8888:8000"
+      - "8001:8000"
     env_file:
       - .env
     environment:
@@ -100,6 +111,10 @@ services:
       - MINIO_HOST=minio
       - POSTGRES_MCP_URL=http://mcp-postgres:8001/sse
       - CHROMA_MCP_URL=http://mcp-chroma:8002/sse
+      - DB_URL=${EXTERNAL_TEST_DB_URL}
+      - MCP_REGISTRY_URL=http://mcp-registry:8010
+      - MCP_SERVER_URL=http://mcp-postgres:8001/sse
+      - PYTHONUNBUFFERED=1
     depends_on:
       - metadata_store
       - chromadb
@@ -108,6 +123,7 @@ services:
       - redis
       - mcp-postgres
       - mcp-chroma
+      - mcp-registry
     networks:
       - insight_network
 
