--- a/packages/mcp-chroma/pyproject.toml
+++ b/packages/mcp-chroma/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "python-dotenv",
     "uvicorn",
     "fastapi",
-    "httpx"
+    "httpx",
+    "google-genai"
 ]
 
 [build-system]
