feat: Add Prometheus, Loki, and Grafana for a full observability stack and integrate metrics into core services.

--- a/apps/mcp-registry/Dockerfile
+++ b/apps/mcp-registry/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY main.py .
 
-RUN pip install fastapi uvicorn pydantic redis httpx
+RUN pip install fastapi uvicorn pydantic redis httpx prometheus-fastapi-instrumentator
 
 EXPOSE 8010
 
