--- a/packages/mcp-chroma/pyproject.toml
+++ b/packages/mcp-chroma/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "uvicorn",
     "fastapi",
     "httpx",
-    "google-genai"
+    "google-genai",
+    "prometheus-client"
 ]
 
 [build-system]
