--- a/packages/mcp-postgres/pyproject.toml
+++ b/packages/mcp-postgres/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "python-dotenv",
     "uvicorn",
     "fastapi",
-    "httpx"
+    "httpx",
+    "prometheus-client"
 ]
 
 [build-system]
