feat: Introduce Helm charts for Kubernetes deployment and refactor RabbitMQ and MCP registry for robustness.

--- a/apps/sql-insight-engine/alembic.ini
+++ b/apps/sql-insight-engine/alembic.ini
@@ -20,7 +20,7 @@ prepend_sys_path = .
 # max_overflow = 50
 
 # sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql://admin:password@localhost:5432/insight_engine
+sqlalchemy.url = postgresql://admin:password@metadata_store:5432/insight_engine
 
 [post_write_hooks]
 # post_write_hooks defines scripts or RFE hooks that are run
