--- a/helm/sql-insight-engine/templates/ui-deployment.yaml
+++ b/helm/sql-insight-engine/templates/ui-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ui.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -43,3 +44,4 @@ spec:
   selector:
     {{- include "sql-insight-engine.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: ui
+{{- end }}
