--- a/helm/sql-insight-engine/values.yaml
+++ b/helm/sql-insight-engine/values.yaml
@@ -13,7 +13,7 @@ api:
   image:
     repository: sql-insight-engine-api
     tag: latest
-    pullPolicy: Never  # Override for local image
+    pullPolicy: Never # Override for local image
   service:
     type: NodePort
     port: 8000
@@ -35,7 +35,7 @@ mcpPostgres:
   image:
     repository: sql-insight-engine-mcp-postgres
     tag: latest
-    pullPolicy: Never  # Override for local image
+    pullPolicy: Never # Override for local image
   service:
     port: 8001
   resources:
@@ -48,20 +48,20 @@ mcpPostgres:
 
 mcpChroma:
   enabled: false
-  replicaCount: 6
+  replicaCount: 8
   image:
     repository: sql-insight-engine-mcp-chroma
     tag: latest
-    pullPolicy: Never  # Override for local image
+    pullPolicy: Never # Override for local image
   service:
     port: 8002
   resources:
     requests:
       memory: "256Mi"
-      cpu: "100m"
+      cpu: "150m"
     limits:
       memory: "512Mi"
-      cpu: "200m"
+      cpu: "300m"
 
 mcpRegistry:
   enabled: false
@@ -69,7 +69,7 @@ mcpRegistry:
   image:
     repository: sql-insight-engine-mcp-registry
     tag: latest
-    pullPolicy: Never  # Override for local image
+    pullPolicy: Never # Override for local image
   service:
     port: 8010
   resources:
@@ -143,14 +143,37 @@ rabbitmq:
 
 chromadb:
   enabled: false
+  mode: "distributed" # "standalone" or "distributed"
+  replicaCount: 3 # Number of Query Executor replicas for distributed mode
   image:
     repository: chromadb/chroma
-    tag: latest
+    tag: "0.5.23" # Use specific version for stability
   service:
     port: 8000
   persistence:
     enabled: true
     size: 5Gi
+  # System database (PostgreSQL)
+  sysdb:
+    host: "sql-insight-engine-postgresql"
+    port: 5432
+    database: "chromadb_sysdb"
+    user: "admin"
+    password: "password"
+  # Object storage (MinIO/S3)
+  storage:
+    endpoint: "sql-insight-engine-minio:9000"
+    bucket: "chromadb-data"
+    accessKey: "minioadmin"
+    secretKey: "minioadmin123"
+    useSSL: false
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "250m"
+    limits:
+      memory: "1Gi"
+      cpu: "500m"
 
 minio:
   enabled: false
@@ -229,8 +252,8 @@ traefik:
 
 # Secrets
 secrets:
-  geminiApiKey: ""  # Set via --set secrets.geminiApiKey=<your-key>
-  
+  geminiApiKey: "" # Set via --set secrets.geminiApiKey=<your-key>
+
 # ConfigMaps
 configMaps:
   enabled: true
