feat: Implement connection pooling for Redis, ChromaDB, and PostgreSQL clients, and optimize Uvicorn server configurations for improved performance.

--- a/packages/mcp-chroma/pyproject.toml
+++ b/packages/mcp-chroma/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "MCP Server for ChromaDB"
 dependencies = [
     "mcp[server]",
-    "chromadb",
+    "chromadb==0.5.23",
     "python-dotenv",
     "uvicorn",
     "fastapi",
