--- a/packages/mcp-database/pyproject.toml
+++ b/packages/mcp-database/pyproject.toml
@@ -1,11 +1,13 @@
 [project]
-name = "mcp-postgres"
+name = "mcp-database"
 version = "0.1.0"
-description = "MCP Server for PostgreSQL"
+description = "MCP Server for Multiple Databases (PostgreSQL, MySQL, MSSQL)"
 dependencies = [
     "mcp[server]",
     "sqlalchemy",
     "psycopg2-binary",
+    "pymysql",
+    "pymssql",
     "python-dotenv",
     "uvicorn",
     "fastapi",
