--- a/helm/sql-insight-engine/templates/mcp-deployments.yaml
+++ b/helm/sql-insight-engine/templates/mcp-deployments.yaml
@@ -1,30 +1,31 @@
-{{- if .Values.mcpPostgres.enabled }}
+{{- if .Values.mcpDatabase.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "sql-insight-engine.fullname" . }}-mcp-postgres
+  name: {{ include "sql-insight-engine.fullname" . }}-mcp-database
   labels:
     {{- include "sql-insight-engine.labels" . | nindent 4 }}
-    app.kubernetes.io/component: mcp-postgres
+    app.kubernetes.io/component: mcp-database
 spec:
-  replicas: {{ .Values.mcpPostgres.replicaCount }}
+  replicas: {{ .Values.mcpDatabase.replicaCount }}
   selector:
     matchLabels:
       {{- include "sql-insight-engine.selectorLabels" . | nindent 6 }}
-      app.kubernetes.io/component: mcp-postgres
+      app.kubernetes.io/component: mcp-database
   template:
     metadata:
       labels:
         {{- include "sql-insight-engine.selectorLabels" . | nindent 8 }}
-        app.kubernetes.io/component: mcp-postgres
+        app.kubernetes.io/component: mcp-database
     spec:
       containers:
-      - name: mcp-postgres
-        image: "{{ .Values.mcpPostgres.image.repository }}:{{ .Values.mcpPostgres.image.tag }}"
-        imagePullPolicy: {{ .Values.mcpPostgres.image.pullPolicy | default .Values.global.imagePullPolicy }}
+      - name: mcp-database
+        image: "{{ .Values.mcpDatabase.image.repository }}:{{ .Values.mcpDatabase.image.tag }}"
+        command: ["sh", "-c", "python -m mcp_database.server"]
+        imagePullPolicy: {{ .Values.mcpDatabase.image.pullPolicy | default .Values.global.imagePullPolicy }}
         ports:
         - name: http
-          containerPort: {{ .Values.mcpPostgres.service.port }}
+          containerPort: {{ .Values.mcpDatabase.service.port }}
         livenessProbe:
           httpGet:
             path: /health
@@ -42,24 +43,30 @@ spec:
           timeoutSeconds: 5
           failureThreshold: 3
         env:
+          {{- if .Values.mcpDatabase.env }}
+          {{- range $key, $value := .Values.mcpDatabase.env }}
+          - name: {{ $key }}
+            value: {{ $value | quote }}
+          {{- end }}
+          {{- end }}
 
-        - name: MCP_DB_URL
-          value: "postgresql://{{ .Values.externalTestDb.env.user }}:{{ .Values.externalTestDb.env.password }}@{{ include "sql-insight-engine.fullname" . }}-external-test-db:{{ .Values.externalTestDb.service.port }}/{{ .Values.externalTestDb.env.database }}"
-        - name: GEMINI_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: {{ include "sql-insight-engine.fullname" . }}-secrets
-              key: gemini-api-key
+          - name: MCP_DB_URL
+            value: "postgresql://{{ .Values.externalTestDb.env.user }}:{{ .Values.externalTestDb.env.password }}@{{ include "sql-insight-engine.fullname" . }}-external-test-db:{{ .Values.externalTestDb.service.port }}/{{ .Values.externalTestDb.env.database }}"
+          - name: GEMINI_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: {{ include "sql-insight-engine.fullname" . }}-secrets
+                key: gemini-api-key
         resources:
-          {{- toYaml .Values.mcpPostgres.resources | nindent 10 }}
+          {{- toYaml .Values.mcpDatabase.resources | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "sql-insight-engine.fullname" . }}-mcp-postgres
+  name: {{ include "sql-insight-engine.fullname" . }}-mcp-database
   labels:
     {{- include "sql-insight-engine.labels" . | nindent 4 }}
-    app.kubernetes.io/component: mcp-postgres
+    app.kubernetes.io/component: mcp-database
 spec:
   type: ClusterIP
   sessionAffinity: ClientIP
@@ -67,13 +74,13 @@ spec:
     clientIP:
       timeoutSeconds: 10
   ports:
-  - port: {{ .Values.mcpPostgres.service.port }}
+  - port: {{ .Values.mcpDatabase.service.port }}
     targetPort: http
     protocol: TCP
     name: http
   selector:
     {{- include "sql-insight-engine.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/component: mcp-postgres
+    app.kubernetes.io/component: mcp-database
 {{- end }}
 ---
 {{- if .Values.mcpChroma.enabled }}
@@ -201,7 +208,7 @@ spec:
         - name: REDIS_HOST
           value: "{{ include "sql-insight-engine.fullname" . }}-redis"
         - name: MCP_SERVICES
-          value: '[{"name": "mcp-postgres", "url": "http://{{ include "sql-insight-engine.fullname" . }}-mcp-postgres:{{ .Values.mcpPostgres.service.port }}/sse"}, {"name": "mcp-chroma", "url": "http://{{ include "sql-insight-engine.fullname" . }}-mcp-chroma:{{ .Values.mcpChroma.service.port }}/sse"}]'
+          value: '[{"name": "mcp-database", "url": "http://{{ include "sql-insight-engine.fullname" . }}-mcp-database:{{ .Values.mcpDatabase.service.port }}/sse"}, {"name": "mcp-chroma", "url": "http://{{ include "sql-insight-engine.fullname" . }}-mcp-chroma:{{ .Values.mcpChroma.service.port }}/sse"}]'
         resources:
           {{- toYaml .Values.mcpRegistry.resources | nindent 10 }}
 ---
